--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.14.1",
